# batch-model-inferencing-engine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
batch_infer/: config.py  io.py  transformers.py
batch_infer/engine/runners/: base_runners.py  core_runners.py
batch_infer/models/: model_runners.py  synthetic_data_generator.py
batch_infer/tests/: conftest.py  test_batch_engine.py  test_causal_runner.py  test_classifier_runner.py  test_io.py  test_synthetic_data.py
examples/: generate_synthetic_data.py  run_classification.py  run_generation.py
